# SCORE

./: .gitignore  README.md  log.txt
3d_line_semantic/: line_extractor_pt2.ipynb
CPP/: CMakeLists.txt  FGO_demo.cpp  README.md  Readme.md  acm_bnb.cpp
CPP/include/: BnB.hpp  helper.hpp  struct.hpp
CPP/src/: BnB.cpp  helper.cpp
csv_dataset/: output_csv_files.py
csv_dataset/55b2bf8036/: lines3d.mat
csv_dataset/689fec23d7/: lines3d.mat
csv_dataset/69e5939669/: lines3d.mat
csv_dataset/c173f62b15/: lines3d.mat
csv_dataset/test_data/: 3Dlines.csv  camera_intrinsic.csv  gt_pose.csv
dictionary/: readme.md
dictionary/55b2bf8036/: dictionary.txt  id_remapping.txt  label_remapping.txt
dictionary/689fec23d7/: dictionary.txt  id_remapping.txt  label_remapping.txt
dictionary/69e5939669/: dictionary.txt  id_remapping.txt  label_remapping.txt
dictionary/c173f62b15/: dictionary.txt  id_remapping.txt  label_remapping copy.txt
line_map_extractor/: README.md  construct_raw_line_map.py  evaluate_prediction.ipynb  helper.py  line_extractor_pt1.py  line_extractor_pt2.ipynb  line_extractor_pt2.py  merge_prune_line_map.py  partition_build_test.py  partition_ref_query.py  prepare_query_data.py  prepare_test_data.py  requirements.txt
line_map_extractor/NetVLAD20/55b2bf8036/: pairs-loc.txt
line_map_extractor/util/: check_line_rect.py  helper.py  test_line_rect_visualize.ipynb
matlab/: README.md  demo.m  test.m
matlab/EGO_PnL/: Readme.txt  Sat_RotEGO.m  get_bounds_sat.m  get_parameter.m
matlab/EGO_func/: Sat_RotEGO.m  get_bounds_sat.m  get_interval.m  get_parameter.m
matlab/Experiment_Helper/: normal.m  polar_2_xyz.m  rot2angle.m  xyz_2_polar.m
matlab/Experiments/: Exp1_rotation.m  Find_Rot_Ambiguous.m  Sensitivity_Plot.m  a_process_csv.m  b_rot.m  c_rot_and_trans.m  c_trans.m  compare_rotation.m  d_rot_and_trans.m  demo.m  median_time.m  pipeline.m  process_csv.m  rotation.m  translation.m
matlab/Experiments/exp_helpers/: match_line.m
matlab/Experiments/records/: 55b2bf8036_rotation_record.mat  55b2bf8036_translation_record.mat  69e5939669_rot_trans_record.mat  69e5939669_rotation_record.mat  69e5939669_translation_record.mat  c173f62b15_rotation_record.mat  c173f62b15_translation_record.mat
matlab/Experiments/utils/: cluster_3D_lines_by_direction.m  draw_pose.m  match_line.m  max_error.m  min_max_rot_error.m  min_max_trans_error.m
matlab/FGO_PnL/: Sat_Bounds_FGO.m  Sat_Bounds_FGO_mex.mexw64  Sat_Bounds_My.m  Sat_Bounds_trans.m  Sat_RotACM_My.m  Sat_RotFGO.m  Sat_TransFGO.m  Sat_t_ransac.m  checkLineRect.m  check_ambiguity.m  cluster_stabber.m  data_process.m  entry_for_trans_mex.m  generate_mex.m  h1_interval_mapping.m  h1_violent.m  h2_interval_mapping.m  lower_interval.m  prune_inliers.m  saturated_interval_stabbing.m  trans_lower_interval.m  trans_upper_interval.m  trans_upper_interval_mex.mexw64  upper_interval.m
matlab/FGO_PnL/Rotation/: Sat_Bounds_FGO.m  Sat_Bounds_FGO_mex.mexw64  Sat_RotFGO.m  Sat_Rot_L.m  Sat_Rot_U.m  Sat_t_ransac.m  check_rot_ambiguity.m  confine_sphere.m  data_process.m  generate_mex.m  h1_interval_mapping.m  h1_violent.m  lower_interval.m  upper_interval.m
matlab/FGO_PnL/Rotation/mex function for linux/: Sat_Bounds_FGO_mex.mexa64
matlab/FGO_PnL/Rotation/mex function for windows/: Sat_Bounds_FGO_mex.mexw64
matlab/FGO_PnL/Translation/: Sat_Bounds_trans.m  Sat_TransFGO.m  Sat_Trans_L.m  Sat_Trans_U.m  checkLineRect.m  prune_inliers.m  trans_lower_interval.m  trans_upper_interval.m  tune_t.m
matlab/FGO_PnL/helpers/: calculate_score.m  cluster_stabber.m  normal.m  polar_2_xyz.m  rot2angle.m  rotation_from_axis_angle.m  subBranch.m  xyz_2_polar.m
matlab/FGO_PnL/mex function for windows/: Sat_Bounds_FGO_mex.mexw64  Sat_Bounds_trans_mex.mexw64  Sat_Rot_L_mex.mexw64  Sat_Rot_U_mex.mexw64  entry_for_rot_mex.m  entry_for_trans_mex.m  h1_interval_mapping_mex.mexw64  h2_interval_mapping_mex.mexw64  saturated_interval_stabbing_mex.mexw64
matlab/FGO_PnL_mex/: sat_var_t_Ransac.m
matlab/FGO_PnL_mex/mex_src/: Sat_Bounds_My.m  Sat_RotACM_My.m  interval_projection.m  lower_interval.m  saturated_interval_stabbing.m
matlab/evaluation_functions/: min_error.m
matlab/helper/: data_process.m  intersect_interval.m  subBranch.m  xyz_2_polar.m
matlab/mex_version/: Sat_Bounds_My_mex.mexw64
matlab/mex_version/mex_src/: h1_interval_mapping.m  upper_interval.m
matlab/plain_version/: Bounds_My.m  saturated_interval_stabbing.m
matlab/test_demo/: 2Dlines.csv  camera_intrinsic.csv  gt_pose.csv  lines3D.mat  test.m  test2dlines.csv
new_cpp/: CMakeLists.txt  RotFGO.cpp  RotFGO.h  TransFGO.cpp  TransFGO.h  test.cpp
new_cpp/include/: RotFGO.h  SatIS.h  TransFGO.h  helper.h
new_cpp/src/: Experiment.cpp  Experiment_Rot.cpp  RotFGO.cpp  TransFGO.cpp  helper.cpp  test.cpp
scannetpp/: merged_config.yaml
scannetpp/common/: render.py
scannetpp/common/configs/: render.yml
scannetpp/common/utils/: anno.py
scannetpp/dslr/: undistort.py  undistort_colmap.py
scannetpp/dslr/configs/: undistort.yml  undistort_colmap.yml
scannetpp/iphone/: prepare_iphone_data.py
scannetpp/iphone/configs/: prepare_iphone_data.yml
scannetpp/semantic/configs/: rasterize.yaml  semantics_2d.yaml
scannetpp/semantic/prep/: rasterize.py  semantics_2d.py
semantic_pipeline/: README.md  ram_ground_sam_openset.py
semantic_pipeline/data/: 55b2bf8036_dictionary.json  55b2bf8036_dictionary.txt  55b2bf8036_dictionary_index.txt  689fec23d7_dictionary.json  689fec23d7_dictionary.txt  69e593966_dictionary.json  69e593966_dictionary.txt  69e593966_dictionary_index.txt  c173f62b15_dictionary.json  c173f62b15_dictionary.txt
test_data/: camera_intrinsic.csv  gt_pose.csv  lines3d.mat  test2dlines.csv  test_data_cpp.csv
